--- a/happiness report.ipynb
+++ b/happiness report.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "import numpy as np \n",
     "import pandas as pd\n",
     "\n",
@@ -278,6 +279,86 @@
     "    df.loc[df['Country Name'] == country, float_columns] = country_data[float_columns].fillna(country_data[float_columns].mean())\n",
     "\n",
     "Asia.to_csv('Asia2.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.00\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "    non-spam       0.00      0.00      0.00       1.0\n",
+      "        spam       0.00      0.00      0.00       0.0\n",
+      "\n",
+      "    accuracy                           0.00       1.0\n",
+      "   macro avg       0.00      0.00      0.00       1.0\n",
+      "weighted avg       0.00      0.00      0.00       1.0\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Admin\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1469: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "c:\\Users\\Admin\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1469: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "c:\\Users\\Admin\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1469: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "c:\\Users\\Admin\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1469: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "c:\\Users\\Admin\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1469: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "c:\\Users\\Admin\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1469: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn.metrics import accuracy_score, classification_report\n",
+    "\n",
+    "# Dữ liệu mẫu (giả sử)\n",
+    "corpus = [\n",
+    "    (\"Giảm giá 50% - Nhấn vào đây ngay!\", \"spam\"),\n",
+    "    (\"Họp cuối tuần sắp tới\", \"non-spam\"),\n",
+    "    (\"Ưu đãi đặc biệt cho nhóm đầu tiên đăng ký\", \"spam\"),\n",
+    "    (\"Báo cáo dự án đã được hoàn thành\", \"non-spam\"),\n",
+    "    # Thêm dữ liệu mẫu tùy ý\n",
+    "]\n",
+    "\n",
+    "# Chia dữ liệu thành tập huấn luyện và tập kiểm tra\n",
+    "texts, labels = zip(*corpus)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(texts, labels, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Chuyển đổi văn bản thành ma trận đếm (Bag of Words)\n",
+    "vectorizer = CountVectorizer()\n",
+    "X_train_vectorized = vectorizer.fit_transform(X_train)\n",
+    "X_test_vectorized = vectorizer.transform(X_test)\n",
+    "\n",
+    "# Huấn luyện mô hình Naive Bayes\n",
+    "nb_model = MultinomialNB()\n",
+    "nb_model.fit(X_train_vectorized, y_train)\n",
+    "\n",
+    "# Dự đoán trên tập kiểm tra\n",
+    "y_pred = nb_model.predict(X_test_vectorized)\n",
+    "\n",
+    "# Đánh giá mô hình\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(f\"Accuracy: {accuracy:.2f}\")\n",
+    "\n",
+    "report = classification_report(y_test, y_pred)\n",
+    "print(\"Classification Report:\\n\", report)\n"
    ]
   }
  ],
